# arcam-control-home-assistant

./: .dockerignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPLIANCE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
config/: configuration.yaml
docs/: arcam_project_overview.md  arcam_protocol_spec.md  development_guide.md  future_enhancements.md  ha_integration_architecture.md  implementation_plan.md  technical_guide.md  testing_strategy.md  troubleshooting.md  user_guide.md
homeassistant/components/arcam_avr/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  media_player.py  services.yaml  strings.json
homeassistant/components/arcam_avr/arcam/: __init__.py  commands.py  connection.py  exceptions.py  protocol.py
homeassistant/components/arcam_avr/translations/: de.json  en.json  es.json  fr.json
scripts/: run_all_checks.sh  validate_code_quality.py
tests/components/arcam_avr/: README.md  __init__.py  conftest.py  run_integration_tests.py  test_config.py  test_config_flow.py  test_device_communication.py  test_init.py  test_integration.py  test_media_player.py  test_performance.py
tests/components/arcam_avr/arcam/: __init__.py  test_commands.py  test_protocol.py
tests/components/arcam_avr/fixtures/: __init__.py  device_responses.py  mock_device.py
